--- a/public/homepage.html
+++ b/public/homepage.html
@@ -15,13 +15,13 @@
     <main>
 
         <!-- home page landing -->
-    <div class="container"></div>
+    <div class="container">
         <div class="header-row">
             <button class="openNav" onclick="openNav()">&#9776;Menu</button>
             <h1 class="home-page__title">Welcome to BlueBelly</h1>
             <button class="login">Sign Up/ Login</button>
         </div>
-        <p class="home-page__description">a platform catered to the Wellesley community </p>
+        <p>a platform catered to the Wellesley community </p>
         <button class="home-page__cta">Get Started</button>
     </div>
     <!-- navbar -->
